; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/i2c/busses/extr_i2c-tiny-usb.c_usb_write.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/i2c/busses/extr_i2c-tiny-usb.c_usb_write.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.i2c_adapter = type { i64 }
%struct.i2c_tiny_usb = type { i32 }

@USB_TYPE_VENDOR = common dso_local global i32 0, align 4
@USB_RECIP_INTERFACE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.i2c_adapter*, i32, i32, i32, i8*, i32)* @usb_write to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @usb_write(%struct.i2c_adapter* %0, i32 %1, i32 %2, i32 %3, i8* %4, i32 %5) #0 {
  %7 = alloca %struct.i2c_adapter*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i8*, align 8
  %12 = alloca i32, align 4
  %13 = alloca %struct.i2c_tiny_usb*, align 8
  store %struct.i2c_adapter* %0, %struct.i2c_adapter** %7, align 8
  store i32 %1, i32* %8, align 4
  store i32 %2, i32* %9, align 4
  store i32 %3, i32* %10, align 4
  store i8* %4, i8** %11, align 8
  store i32 %5, i32* %12, align 4
  %14 = load %struct.i2c_adapter*, %struct.i2c_adapter** %7, align 8
  %15 = getelementptr inbounds %struct.i2c_adapter, %struct.i2c_adapter* %14, i32 0, i32 0
  %16 = load i64, i64* %15, align 8
  %17 = inttoptr i64 %16 to %struct.i2c_tiny_usb*
  store %struct.i2c_tiny_usb* %17, %struct.i2c_tiny_usb** %13, align 8
  %18 = load %struct.i2c_tiny_usb*, %struct.i2c_tiny_usb** %13, align 8
  %19 = getelementptr inbounds %struct.i2c_tiny_usb, %struct.i2c_tiny_usb* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = load %struct.i2c_tiny_usb*, %struct.i2c_tiny_usb** %13, align 8
  %22 = getelementptr inbounds %struct.i2c_tiny_usb, %struct.i2c_tiny_usb* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 4
  %24 = call i32 @usb_sndctrlpipe(i32 %23, i32 0)
  %25 = load i32, i32* %8, align 4
  %26 = load i32, i32* @USB_TYPE_VENDOR, align 4
  %27 = load i32, i32* @USB_RECIP_INTERFACE, align 4
  %28 = or i32 %26, %27
  %29 = load i32, i32* %9, align 4
  %30 = load i32, i32* %10, align 4
  %31 = load i8*, i8** %11, align 8
  %32 = load i32, i32* %12, align 4
  %33 = call i32 @usb_control_msg(i32 %20, i32 %24, i32 %25, i32 %28, i32 %29, i32 %30, i8* %31, i32 %32, i32 2000)
  ret i32 %33
}

declare dso_local i32 @usb_control_msg(i32, i32, i32, i32, i32, i32, i8*, i32, i32) #1

declare dso_local i32 @usb_sndctrlpipe(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
